# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

source_set("txt") {
  sources = [
    "src/font_collection.cc",
    "src/font_collection.h",
    "src/font_skia.cc",
    "src/font_skia.h",
    "src/font_style.h",
    "src/font_weight.h",
    "src/paint_record.cc",
    "src/paint_record.h",
    "src/paragraph.cc",
    "src/paragraph.h",
    "src/paragraph_builder.cc",
    "src/paragraph_builder.h",
    "src/paragraph_constraints.cc",
    "src/paragraph_constraints.h",
    "src/paragraph_style.cc",
    "src/paragraph_style.h",
    "src/styled_runs.cc",
    "src/styled_runs.h",
    "src/text_align.h",
    "src/text_style.cc",
    "src/text_style.h",
  ]

  deps = [
    "//third_party/minikin/libs/minikin",
    "//third_party/skia",
  ]
}

executable("example") {
  output_name = "txt_example"

  sources = [
    "examples/main.cc",
  ]

  deps = [
    "//dart/runtime:libdart_jit",
    "//flutter/fml",
    "//lib/txt",
    "//third_party/freetype2",
    "//third_party/icu:icuuc",
    "//third_party/minikin/libs/minikin",
    "//third_party/skia",
  ]
}

executable("unittests") {
  output_name = "txt_unittests"

  include_dirs = [ "src" ]

  sources = [
    "tests/font_collection_unittests.cc",
    "tests/paragraph_unittests.cc",
    "tests/render_test.cc",
    "tests/txt_run_all_unittests.cc",
  ]

  deps = [
    ":txt",
    "//dart/runtime:libdart_jit",
    "//flutter/fml",
    "//third_party/gtest",
    "//third_party/minikin/libs/minikin",
    "//third_party/skia",
  ]
}
